src/component/App.css
/*

colors picked from: https://flatuicolors.com/palette/au;

*/
html,
body,
#root,
.app {
  height: 100%;
  background-color: #fff;
}
.ui.grid.app {
	margin: 0;
	overflow: hidden !important;
}
.ui.grid.app > .row,
.ui.grid.app > .row > .column {
	height: 100%;
	padding: 0;
}
.ui.grid.app > .row > .column:first-child {
	width: 20%;
}
.ui.grid.app > .row > .column:last-child {
	width: 80%;
}
.asidePannel > .ui.large.vertical.menu {
	width: 100%;
	height: 100%;
	overflow-y: auto;
	font-size: 16px;
	margin: 0;
	border-radius: 0;
	background-color: #001796;
}
.asidePannel .ui.vertical.inverted.menu .menu .item {
	color: rgba(255, 255, 255, 0.8);
}
.asidePannel .ui.vertical.inverted.menu .menu > .item {
	font-weight: bold;
}
.asidePannel .ui.vertical.menu .item > i.icon.users,
.asidePannel .ui.vertical.menu .item > i.icon.address.book {
	font-size: 16px;
	cursor: pointer;
}
.chatPannel .ui.segment {
	margin: 0;
	box-shadow: none;
	border: none;
}
.chatPannel .ui.segment.messagesHeader {
	height: 66px;
	border-radius: 0;
	border-bottom: 1px solid #ddd;
}
.messagesHeader .ui.header .sub.header {
	margin-top: 5px;
	font-size: 14px;
}
/* Messages js */
.chatPannel .messagesContainer {
	height: calc(100% - 150px);
}
.messagesContainer > div {
	height: 100%;
	overflow: hidden;
	overflow-y: auto;
}
.messagesContainer > div {
	float: left;
}
.messagesContainer > div:first-child {
	width: 100%;
}
.messagesContainer > div:last-child {
	width: 0;
}
.messagesContainer.showChannelInfo > div:first-child {
	width: 75%;
	border-right: 1px solid #ddd;
}
.messagesContainer.showChannelInfo > div:last-child {
	width: 25%;
}

.ui.segment.messages .ui.comments {
	max-width: 100%;
}

/* message form js*/
.chatPannel .ui.segment.message__form {
	position: absolute;
	z-index: 200;
	right: 0;
	bottom: 0;
	left: 0;
	margin: 0;
	padding: 5px;
	line-height: 1;
	border: 1px solid #ddd;
}
.ui.segment.message__form textarea {
    width: 100%;
    height: 70px;
    padding: 8px 100px 8px 8px;
	resize: none;
    border-radius: 3px;
}
.ui.segment.message__form .btn-group {
	position: absolute;
	top: 33px;
	right: 11px;
}
/* message.js */
.message__self {
	border-left: 2px solid blue;
	padding-left: 8px;
}

.message__image {
	padding: 1em;
}
.channels-list a.item .icon {
	font-size: 12px;
}
.message-users-list i.icon {
	line-height: 1.1;
}
.ui.vertical.menu .message-users-list .item > i.icon {
	float: left;
	margin: 0 .5rem 0 0;
}
/* progress bar */
.progress__bar {
	margin: .3em 0 0 0 !important;
}

/* metapanel styles */
.chatPannel .ui.segment.channelInfo {
	padding: 0;
}
.channelInfo .ui.styled.accordion,
.channelInfo .ui.styled.accordion .accordion {
	box-shadow: none;
	border-radius: 0;
    border-bottom: 1px solid #ddd;
}
.ui.vertical.menu .channels-list .item > i.icon {
	margin-top: 1px;
}

/* typing js */
.user__typing {
	font-style: italic;
	font-weight: bold;
	margin-right: 3px;
}

.typing {
	width: 5em;
	height: 2em;
	position: relative;
	padding: 10px;
	margin-left: 5px;
	background: #e6e6e6;
	border-radius: 20px;
}

.typing__dot {
	float: left;
	width: 8px;
	height: 8px;
	margin: 0 4px;
	background: #8d8c91;
	border-radius: 50%;
	opacity: 0;
	animation: loadingFade 1s infinite;
}

.typing__dot:nth-child(1) {
	animation-delay: 0s;
}

.typing__dot:nth-child(2) {
	animation-delay: 0.2s;
}

.typing__dot:nth-child(3) {
	animation-delay: 0.4s;
}

@keyframes loadingFade {
	0% { opacity: 0; }
	50% { opacity: 0.8; }
	100% { opacity: 0; }
}

/* default scrolbar */
.scrollBar-container {
	max-height: 150px;
	overflow: hidden;
	overflow-y: auto;
}
.scrollBar-container::-webkit-scrollbar,
.messagesContainer > div::-webkit-scrollbar {
  width: 6px !important;
}
.scrollBar-container::-webkit-scrollbar-track,
.messagesContainer > div::-webkit-scrollbar-track {
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.3) !important;
}
.scrollBar-container::-webkit-scrollbar-thumb,
.messagesContainer > div::-webkit-scrollbar-thumb {
  border-radius: 0 !important;
}
.scrollBar-container::-webkit-scrollbar-thumb {
	background-color: #ffffff !important;
}
.messagesContainer > div::-webkit-scrollbar-thumb {
  background-color: #130f40 !important;
}

